--- a/public/main.css
+++ b/public/main.css
@@ -37,9 +37,9 @@ body {
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 300;
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.8);
   margin: 0 0 16px;
 }
 
@@ -47,21 +47,17 @@ p {
   line-height: 140%;
   margin: 16px 0 24px;
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 a {
-  display: block;
-  text-align: center;
-  background: #039be5;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: white;
-  padding: 16px;
-  border-radius: 4px;
+  line-height: 140%;
+  margin: 16px 0 24px;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.7);
 }
 
-.box, .box a {
+.box {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -105,22 +101,46 @@ a {
   display: block;
   outline: 0;
   background: #f2f2f2;
-  width: 25%;
+  width: 20%;
   border: 0;
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
   margin-bottom: 20px;
 }
+.score:invalid{
+  border:2px dashed rgba(255,0,0,0.5);
+}
 
-#add {
+.time {
+  display: block;
+  outline: 0;
+  background: #f2f2f2;
+  width: 40%;
+  border: 0;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  margin-bottom: 20px;
+  font-family:Roboto;
+}
+
+#datetime:invalid{
+  border:2px dashed rgba(255,0,0,0.5);
+}
+
+.add {
   margin: 0;
 }
 
 #small {
   font-size: 11px;
-  margin-top:5px;
-  margin-bottom:0px;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+th{
+  text-align:left;
 }
 
 @media (max-width: 600px) {
@@ -131,5 +151,11 @@ a {
   }
   body {
     border-top: 16px solid #ffa100;
+  }
+  .time{
+    width: 55%;
+  }
+  .score{
+    width:50%;
   }
 }
