--- a/public/main.css
+++ b/public/main.css
@@ -6,12 +6,13 @@ body {
   padding: 0;
 }
 
-img{
+img {
   max-width: 90%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
+
 .box {
   background: white;
   max-width: 900px;
@@ -26,7 +27,7 @@ img{
 
 #top {
   margin: 75px auto 16px;
-  display:block;
+  display: block;
 }
 
 .box h2 {
@@ -75,10 +76,11 @@ a {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-#bottom {
+.bottom {
   color: rgba(0, 0, 0, 0.6);
   text-align: center;
   font-size: 14px;
+  margin-bottom: 10px;
 }
 
 .box button {
@@ -99,16 +101,17 @@ a {
 .score {
   display: block;
   outline: 0;
-  background: #f2f2f2;
+  background: #eee;
   border: 0;
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
   margin-bottom: 20px;
-  min-width:200px;
+  min-width: 200px;
 }
-.score:invalid{
-  border:2px dashed rgba(255,0,0,0.5);
+
+.score:invalid {
+  border: 2px dashed rgba(255, 0, 0, 0.5);
 }
 
 .time {
@@ -121,12 +124,12 @@ a {
   box-sizing: border-box;
   font-size: 14px;
   margin-bottom: 20px;
-  font-family:Roboto;
-  min-width:300px;
+  font-family: Roboto;
+  min-width: 300px;
 }
 
-#datetime:invalid{
-  border:2px dashed rgba(255,0,0,0.5);
+#datetime:invalid {
+  border: 2px dashed rgba(255, 0, 0, 0.5);
 }
 
 .add {
@@ -139,11 +142,11 @@ a {
   margin-bottom: 0px;
 }
 
-th{
-  text-align:left;
+th {
+  text-align: left;
 }
 
-.jpedit{
+.jpedit {
   outline: 0;
   background: #f3f3f3;
   width: 50%;
@@ -151,23 +154,23 @@ th{
   padding: 5px;
   box-sizing: border-box;
   margin-bottom: 5px;
-  margin-top:5px;
-  min-width:100px;
+  margin-top: 5px;
+  min-width: 100px;
 }
 
-.jpedit:invalid{
-  border:1.5px dashed rgba(255,0,0,0.5);
+.jpedit:invalid {
+  border: 1.5px dashed rgba(255, 0, 0, 0.5);
 }
 
-.scatter-legend-marker { 
-  width: 14px; 
-  height: 14px; 
-  display: inline-block; 
+.scatter-legend-marker {
+  width: 14px;
+  height: 14px;
+  display: inline-block;
 }
 
 .box button {
   outline: 0;
-  display:inline-block;
+  display: inline-block;
   border: 0;
   text-align: center;
   background: #039be5;
@@ -180,11 +183,14 @@ th{
 }
 
 @media (max-width: 600px) {
-  body, #message {
+
+  body,
+  #message {
     margin-top: 0;
     background: white;
     box-shadow: none;
   }
+
   body {
     border-top: 16px solid #ffa100;
   }
