--- a/public/main.css
+++ b/public/main.css
@@ -237,6 +237,7 @@ th {
 
 label {
   cursor: pointer;
+  font: normal normal normal 14px/1 FontAwesome;
   text-indent: -9999px;
   width: 50px;
   height: 27px;
@@ -247,10 +248,15 @@ label {
 }
 
 label:after {
-  content: "";
+  text-indent: 3px;
+  color: rgb(35, 40, 51);
+  font-size: 16px;
+  font-weight: bold;
+  content: "\f186";
+  line-height: 20px;
   position: absolute;
   top: 3px;
-  left: 3px;
+  left: 4px;
   width: 20px;
   height: 20px;
   background: #fff;
@@ -263,7 +269,7 @@ label:after {
 }
 
 #switch:checked+label:after {
-  left: calc(100% - 5px);
+  left: calc(100% - 4px);
   transform: translateX(-100%);
 }
 
