--- a/public/main.css
+++ b/public/main.css
@@ -80,6 +80,7 @@ h1 {
 
 h4 {
   color: var(--text-color);
+  margin-bottom: 5px;
 }
 
 p {
@@ -149,9 +150,12 @@ input:-webkit-autofill:focus {
   box-sizing: border-box;
   font-size: 14px;
   margin-bottom: 20px;
-  min-width: 200px;
+  width: 100%;
+  max-width: 200px;
+  min-width: 120px;
   color: var(--text-color);
   border-radius: 3px;
+  height: 50px;
 }
 
 .score:invalid {
@@ -162,14 +166,16 @@ input:-webkit-autofill:focus {
   display: block;
   outline: 0;
   background: var(--input-color);
-  width: 40%;
+  width: 100%;
+  min-width:150px;
+  max-width: 300px;
   border: 0;
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
   margin-bottom: 20px;
   font-family: Roboto;
-  min-width: 300px;
+  height: 50px;
   color: var(--text-color);
 }
 
@@ -191,7 +197,7 @@ th {
   text-align: left;
 }
 
-.jpedit {
+.naedit {
   outline: 0;
   background: var(--input-color);
   width: 50%;
@@ -205,7 +211,7 @@ th {
   color: var(--text-color);
 }
 
-.jpedit:invalid {
+.naedit:invalid {
   border: 1.5px dashed rgba(255, 0, 0, 0.5);
 }
 
@@ -279,4 +285,16 @@ html.transition *:before,
 html.transition *:after {
   transition: all 750ms !important;
   transition-delay: 0 !important;
+}
+
+.underlabel{
+  padding: 0;
+  margin:0;
+  color: rgb(127, 127, 127);
+  font-size: 10px;
+}
+
+.lessspace{
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
